fix container box shadown on dark mode

--- a/css/styles-dark.css
+++ b/css/styles-dark.css
@@ -99,7 +99,7 @@ button:active {
   padding: 10px;
   margin-right: 40px;
   margin-left: 40px;
-  box-shadow: 10px 10px 20px #131415, -10px -10px 20px #393b41;
+  box-shadow: 0 0 15px #131415;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
   -ms-overflow-style: none;
